# ltp-owui-pipelines

./: .gitignore  Dockerfile  convert_pdf.py  output.md  pyproject.toml  requirements.txt  summarizer.py
pipelines/: detoxify.py  pirate.py
pipelines/failed/: pirate.py  test.py
pipelines/pirate/: valves.json
pipelines/test/: valves.json
