[tool.poetry]
name = "pipes"
version = "0.1.0"
description = ""
authors = ["Diogo Bento <diogo.bento@ltplabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = {version = "0.22.0", extras = ["standard"]}
pydantic = "2.7.4"
python-multipart = "0.0.9"
python-socketio = "^5.12.1"
grpcio = "^1.71.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
requests = "2.32.2"
aiohttp = "3.9.5"
httpx = "^0.28.1"
openai = "^1.68.0"
anthropic = "^0.49.0"
google-generativeai = "^0.8.4"
vertexai = "^1.71.1"
pymongo = "^4.11.3"
peewee = "^3.17.9"
sqlalchemy = "^2.0.39"
boto3 = "^1.37.16"
redis = "^5.2.1"
sqlmodel = "^0.0.24"
chromadb = "^0.6.3"
psycopg2-binary = "^2.9.10"
langfuse = "^2.60.0"
ddtrace = "^3.2.1"
torch = "^2.6.0"
numpy = "^2.2.4"
pandas = "^2.2.3"
xgboost = "^3.0.0"
scikit-learn = "^1.6.1"
sentence-transformers = "^3.4.1"
transformers = "^4.49.0"
tokenizers = "^0.21.1"
nltk = "^3.9.1"
tiktoken = "^0.9.0"
pillow = "^11.1.0"
opencv-python = "^4.11.0.86"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
selenium = "^4.29.0"
playwright = "^1.51.0"
beautifulsoup4 = "^4.13.3"
langchain = "^0.3.21"
langchain-openai = "^0.3.9"
langchain-experimental = "^0.3.4"
pdfminer-six = "^20250327"
pypdf2 = "^3.0.1"
wikipedia = "^1.4.0"
html2text = "^2025.4.15"
langgraph = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
